# bastion

./: .gitignore  Makefile  README.md  go.mod  go.sum
cmd/: key.go  key_create.go  key_list.go  key_revoke.go  root.go  run.go
cmd/bastion/: main.go
config/: config.toml
docs/: api-docs.md  desig.md  design.md  get-started.md  notes.md  py-sdk-docs.md  roadmap.md  todo.md
example/: py_sdk.py  terminal.html
internal/api/: api_handler.go  file_handler.go  handler.go  job_handler.go  middleware.go  requests.go  responses.go  routes.go  session_handler.go
internal/auth/: handler.go  keys.go  middleware.go
internal/bastion/: main.go
internal/config/: config.go  loader.go  validator.go
openapi/: openapi.yaml
sdk/: .gitignore
sdk/python/bastion/: README.md  __init__.py  client.py  exceptions.py  files.py  jobs.py  pyproject.toml  sessions.py  terminal.py
sdk/python/bastion/generated_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
sdk/python/bastion/generated_client/api/: __init__.py  files_api.py  jobs_api.py  sessions_api.py  system_api.py  terminal_api.py
sdk/python/bastion/generated_client/models/: __init__.py  api_error.py  create_session_response.py  delete_request.py  delete_session_response.py  file_delete_response.py  file_entry.py  file_upload_response.py  get_session_status_response.py  job_exec_request.py  job_exec_response.py  job_output_response.py  job_status.py  job_status_response.py  list_file_response.py  session_status.py  upload_file_request_metadata.py
tests/: temp.sh  test.sh
(+18 files in other folders)
